--- a/style.css
+++ b/style.css
@@ -404,12 +404,12 @@ button{
     padding: 10px;
     margin: auto;
 }
-.gridimg .grid{
+.gridimg .group{
     display: flex;
     margin: 10px;
     /* margin: auto; */
 }
-.gridimg .grid .items{
+.gridimg .group .items{
     display: flex;
     margin:  auto;
     
@@ -420,29 +420,162 @@ button{
     padding:  5px;
    
 }
-.gridimg .grid .items .text{
+
+.gridimg .group .items .text{
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50%;
    
 }
-.gridimg .grid .items .pic{
+.gridimg .group .items .pic{
     width: 50%;
    
 }
-.gridimg .grid .items .pic img{
+.gridimg .group .items .pic img{
     display: block;
     width: 100%;
 }
-.container{
-    /* width: 100%; */
+/* --------------------------------- */
+.bigwrap{
+    width: 100%;
+    margin: 20px;
+}
+.bigwrap .container{
+    width: 1220px;
+    height: 620px;
+    margin: auto;
+    background-color: pink;
+    position: relative;
+    /* border-left: 25px solid pink; */
+    /* border-top: 25px solid pink; */
+}
+.bigwrap .container .container-second{
     width: 1200px;
-    /* height: 600px; */
-    /* margin: auto; */
-    /* text-align: center; */
-    /* display: flex;
-    justify-content: center; */
+    height: 600px;
+    position: absolute;
+    margin: auto;
+    background-color: #ccc;
+    top: 20px;
+    left: 20px;
+    
+    
+}
+.bigwrap .container .container-second .content{
+    display: grid;
+    grid-template-rows:repeat(11,50px) ;
+    grid-template-columns:100px  ;
+    position: absolute;
+    top: 30px;
+  
+}
+.bigwrap .container .container-second .content p{
+    display: flex;
+    flex-direction:row-reverse;
+    align-items: flex-end;
+    
+    /* grid-row-end: 11; */
+}
+.bigwrap .container .top_title h2{
+    color: white;
+}
+.bigwrap .container .top_title{
+    
+   
+    position: absolute;
+    width: fit-content;
+    background-color: pink;
+    top: -20px;
+    left: -20px;
+    padding: 20px ;
+}
+.bigwrap .container .container-second .content_img{
+    width: 1080px;
+    height: 540px;
+    background-color: white;
+    position: absolute;
+    top: 49px;
+    left: 116px;
+    display: grid;
+    grid-template-columns: 15% 31% 18% 18% 18%;
+}
+.bigwrap .container .container-second .content_img .firm_logo{
+    display: grid;
+    grid-template-rows:repeat(6,1fr) ;
+}
+.bigwrap .container .container-second .content_img .holiday_merchandise img{
+    width: 100%;
+    height: 100%;
+}
+.bigwrap .container .container-second .content_img .holiday_merchandise{
+    display: grid;
+    grid-template-rows: 100%;
+}
+.bigwrap .container .container-second .content_img .General_goods{
+    display: grid;
+    grid-template-rows: 60% 40%;
+    border-right: 5px solid #ccc;
+}
+/* .bigwrap .container .container-second .content_img .General_goods .grid_frame{
+    border-right: 2px solid r;
+} */
+.bigwrap .container .container-second .content_img .General_goods .textandimg_vertical
+{
+    border-bottom: 5px solid #ccc;
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_vertical .goods_img{
+    display: grid;
+    grid-template-rows: 100%;
+    
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_vertical .goods_img img{
+    width: 80%;
+}
+.content_img .General_goods .textandimg_vertical h3{
+    color: red;
+}
+.content_img .General_goods .textandimg_vertical .text{
+    padding: 20px;
+}
+.content_img .General_goods .textandimg_vertical .price{
+    /* position: absolute;
+    top: 130px;
+    left: 520px; */
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_horizontal .wrap{
+    display: flex;
+    text-align: center;
+    
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_horizontal .wrap .price{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_horizontal .wrap .goods_img{
+    /* display: grid;
+    grid-template-rows: 100%; */
+    width: 50%;
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_horizontal .wrap .goods_img img{
+    width: 100%;
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_horizontal .text{
+    padding: 10px 20px;
+}
+.bigwrap .container .container-second .content_img .General_goods .textandimg_horizontal .wrap .price h3{
+    color:red;
+}
+/* ----------------------------------------- */
+/* .container{
+    width: 100%;
+    width: 1200px;
+    height: 600px;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    justify-content: center; 
 }
 .wrap .container .item img{
     margin: auto;
@@ -461,7 +594,7 @@ button{
     
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 1fr 1fr;
-}
+} */
 /* ------------------------------------------------- */
 
 .Policy_advocacy{
